# sxx

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  pkg_install.pl  script.sh
doc/: sxx.pod
dockerfiles/: docker.sh  opensuse423  ubuntu1710
dockerfiles/centos/6/: Dockerfile
dockerfiles/centos/7/: Dockerfile
dockerfiles/debian/9/: Dockerfile
dockerfiles/opensuse/42.3/: Dockerfile
dockerfiles/ubuntu/16.04/: Dockerfile
dockerfiles/ubuntu/17.10/: Dockerfile
dockerfiles/ubuntu/18.04/: Dockerfile
include/: proc.hpp  uri.hpp  utils.hpp
scripts/: build.sh
src/: sxx.cpp
test/: CMakeLists.txt  utils.cpp
